Freeze media time and audio rendering when the system suspends.

Allows us to avoid unexpected differences between what the audio
renderer and video renderer think the current time is. Causes the
wall clock time calculations to return false for "is time moving."

With this information the video renderer (and other callers) can
accurately act upon frozen moments and not expire frames due to
a difference of opinion on what the current time is (audio only
updates its base every Render() call).

BUG=620478
TEST=new unittests

Review-Url: https://codereview.chromium.org/2072843002
Cr-Commit-Position: refs/heads/master@{#400454}

Former-commit-id: e3fb958aa538c5b146afea7f9df498a579d3e5a4