media/renderers/audio_renderer_impl.h
@@ -26,6 +26,7 @@
 
 #include "base/macros.h"
 #include "base/memory/weak_ptr.h"
+#include "base/power_monitor/power_observer.h"
 #include "base/synchronization/lock.h"
 #include "media/base/audio_decoder.h"
 #include "media/base/audio_renderer.h"
@@ -53,6 +54,7 @@ class DecryptingDemuxerStream;
 class MEDIA_EXPORT AudioRendererImpl
     : public AudioRenderer,
       public TimeSource,
+      public base::PowerObserver,
       NON_EXPORTED_BASE(public AudioRendererSink::RenderCallback) {
  public:
   // |task_runner| is the thread on which AudioRendererImpl will execute.
@@ -86,6 +88,10 @@ class MEDIA_EXPORT AudioRendererImpl
   void Flush(const base::Closure& callback) override;
   void StartPlaying() override;
   void SetVolume(float volume) override;
+
+  // base::PowerObserver implementation.
+  void OnSuspend() override;
+  void OnResume() override;
 
  private:
   friend class AudioRendererImplTest;
@@ -284,6 +290,10 @@ class MEDIA_EXPORT AudioRendererImpl
   // Set by CurrentMediaTime(), used to prevent the current media time value as
   // reported to JavaScript from going backwards in time.
   base::TimeDelta last_media_timestamp_;
+
+  // Set by OnSuspend() and OnResume() to indicate when the system is about to
+  // suspend/is suspended and when it resumes.
+  bool is_suspending_;
 
   // End variables which must be accessed under |lock_|. ----------------------
 
